--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   </div>
   <div class="lower-data">
     <div class="more-info-label">
-      More Information
+      MORE INFORMATION
     </div>
     <div class="more-info-container">
       <div class="info-block">
